Fix card spacing

--- a/frontend/MealMatch-Webapp/src/building-components/recipe-view-card/recipe-view-card.component.scss
+++ b/frontend/MealMatch-Webapp/src/building-components/recipe-view-card/recipe-view-card.component.scss
@@ -1,16 +1,16 @@
 
 .recipe {
-     width: 23vw;
+    width: 21vw;
     margin-left: 1vw;
     margin-top: 1vw;
     button {
         margin-bottom: 1.5vh;
         width: 40%;
-        margin-right: 1vw;
+        margin-left: 1vw;
     }
     img {
         border-radius: 2.5%;
-        width: 23vw;
+        width: 21vw;
         height: 20vh;
     }
     .ingredient-list {
@@ -34,9 +34,12 @@
 .invisible-outline:hover {
     background-color: lightgray;
 }
+
 .edit-delete-container {
     position: relative;
+    display:flex;
     bottom: 0;
-    width: 95%;
+    width: 100%;
     flex: 2;
+    justify-content: space-around;
 }
